--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 pest_consume = "1.0.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
