--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.0.0"
 authors = ["Darryl Yeo <dev@darryl-yeo.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "nectar_lib"
+crate-type = ["cdylib"]
 
 [dependencies]
 pest = "2.1.3"
@@ -12,3 +14,4 @@ pest_derive = "2.1.0"
 pest_consume = "1.0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+wasm-bindgen = "=0.2.61"
